<!--
  Copyright 2022 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
  in compliance with the License. You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software distributed under the License
  is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
  or implied. See the License for the specific language governing permissions and limitations under
  the License.
  -->
<resources>
    <string name="app_name">Budgeter</string>


    <string name="budgeter">Budgeter</string>

    <!--    Buttons and general -->
    <string name="withdraw">Withdraw</string>
    <string name="deposit">Deposit</string>
    <string name="recent_transactions">Recent transactions</string>
    <string name="transactions_details">Transaction details</string>
    <string name="total">Total</string>
    <string name="balance">"Balance"</string>
    <string name="add_transaction">Add a transaction</string>
    <string name="save">Save</string>
    <string name="month_literal">Month</string>
    <string name="year_literal">Year</string>
    <string name="no_data">No data</string>
    <string name="amount">Amount</string>


    <!--    Months   -->
    <string name="january_short">Jan</string>
    <string name="january_long">January</string>
    <string name="february_short">Feb</string>
    <string name="february_long">February</string>
    <string name="march_short">Mar</string>
    <string name="march_long">March</string>
    <string name="april_short">Apr</string>
    <string name="april_long">April</string>
    <string name="may_short">May</string>
    <string name="may_long">May</string>
    <string name="june_short">Jun</string>
    <string name="june_long">June</string>
    <string name="july_short">Jul</string>
    <string name="july_long">July</string>
    <string name="august_short">Aug</string>
    <string name="august_long">August</string>
    <string name="september_short">Sep</string>
    <string name="september_long">September</string>
    <string name="october_short">Oct</string>
    <string name="october_long">October</string>
    <string name="november_short">Nov</string>
    <string name="november_long">November</string>
    <string name="december_short">Dec</string>
    <string name="december_long">December</string>


    <!--Content Descritions-->
    <string name="descr_transaction_icon">Icon representing the transaction type</string>
    <string name="descr_previous_btn">Go to previous Month/Year</string>
    <string name="descr_next_btn">Go to next Month/Year</string>
    <string name="search_transactions">Search transactions</string>
    <string name="description">Description</string>

    <!-- Categories -->
    <string name="category_transportation">Transportation</string>
    <string name="category_groceries">Groceries</string>
    <string name="category_food">Food</string>
    <string name="category_travel">Travel</string>
    <string name="category_utilities">Utilities</string>
    <string name="category_entertainment">Entertainment</string>
    <string name="category_housing">Housing</string>
    <string name="category_education">Education</string>
    <string name="category_healthcare">Healthcare</string>
    <string name="category_others">Others</string>
    <string name="category_deposit">Deposit</string>

    <!--Navigation-->
    <string name="home">Home</string>
    <string name="analytics">Analytics</string>
    <string name="transactions">Transactions</string>

    <!--    Settings -->
    <string name="telemetry">Telemetry</string>
    <string name="send_crash_reports">Send crash reports</string>
    <string name="send_usage_reports">Send usage reports</string>
    <string name="privacy_popup">Privacy settings</string>
    <string name="privacy_descr">Telemetry allows us to understand and improve the user experience with the app.</string>
    <string name="learn_more">Learn more</string>
    <string name="accept">Confirm</string>
    <string name="dismiss">Dismiss</string>

</resources>